[v8] Low efficiency of writing long string from web application to plugin. https://bugs.webkit.org/show_bug.cgi?id=76592

The efficiency will be improved by 300 times in the best case, when the
size of string reaches 1MB.

Patch by Li Yin <li.yin@intel.com> on 2012-01-18
Reviewed by Adam Barth.

* bindings/v8/V8NPUtils.cpp:
(WebCore::convertV8ObjectToNPVariant):

Canonical link: https://commits.webkit.org/93434@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105389 268f45cc-cd09-0410-ab3c-d52691b4dbfc